--- a/frontend/themes/e-booklibrary/main-layout.css
+++ b/frontend/themes/e-booklibrary/main-layout.css
@@ -1,3 +1,7 @@
+:host{
+	background-image: url('books-tunnel.jpg');
+}
+
 [slot='drawer'] {
   background-image: linear-gradient(0deg, var(--lumo-shade-5pct), var(--lumo-shade-5pct));
 }
